--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,2 +1,20 @@
-tweepy==3.5.0
+Flask==0.12.2
+Jinja2==2.9.6
+MarkupSafe==1.0
+Werkzeug==0.12.2
+certifi==2017.7.27.1
+chardet==3.0.4
+click==6.7
+gender-guesser==0.4.0
+idna==2.6
+itsdangerous==0.24
+nltk==3.2.4
+oauthlib==2.0.3
+pymongo==3.5.1
+requests==2.18.4
+requests-oauthlib==0.8.0
+six==1.10.0
 textblob==0.13.0
+tweepy==3.5.0
+urllib3==1.22
+wsgiref==0.1.2
