--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,19 +1,25 @@
+beautifulsoup4==4.6.0
+Cerberus==0.9.2
 certifi==2017.7.27.1
 chardet==3.0.4
 click==6.7
-Flask==0.12.2
+Eve==0.7.4
+Events==0.2.2
+Flask==0.12
+Flask-PyMongo==0.5.1
 gender-guesser==0.4.0
 idna==2.6
 itsdangerous==0.24
 Jinja2==2.9.6
-MarkupSafe==1.0
+MarkupSafe==0.23
 nltk==3.2.4
 oauthlib==2.0.3
 pymongo==3.5.1
 requests==2.18.4
 requests-oauthlib==0.8.0
+simplejson==3.11.1
 six==1.10.0
 textblob==0.13.0
 tweepy==3.5.0
 urllib3==1.22
-Werkzeug==0.12.2
+Werkzeug==0.11.15
